--- a/front/src/stylesAg.css
+++ b/front/src/stylesAg.css
@@ -45,3 +45,14 @@ body {
     margin-top: 20px;
     margin-bottom: 20px;
 }
+.wrap_button {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    height: 20%;
+    width: 50%;
+}
+.buttons {
+    display: flex;
+    width: 100%;
+}
